RM-695: Consolidation of RM actions appearing in RM rule UI
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@50977 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
@@ -1,4 +1,5 @@
 header.action=Perform Action:
+button.freeze=Freeze...
 button.reject=Reject...
 button.requestInfo=Request Information...
 menu.item.select=Select...
