DOD Recert:  Simple support for event and property filtering on audit
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/DODRECERT@51108 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -210,7 +210,7 @@ subprojects {
 		copy {
 			from "${configModuleDir}"
 			include "${moduleProperties}"
-			include "${fileMapping}"			
+			include "${fileMapping}"	
 			into assembleDir
 		}
 	
@@ -222,7 +222,8 @@ subprojects {
 		copy {
 			from configDir
 			exclude "**/${moduleProperties}"
-			exclude "**/${fileMapping}"
+			exclude "**/${fileMapping}"			
+			exclude "**/dev-context.xml"
 			into "${assembleDir}/config"		
 		}
 		
