RM-752 (RM Dependency upgrade to 4.2)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@51840 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,8 @@ alfrescoEnterpriseMavenPwd=
 
 # set to org.alfresco.enterprise when enterprise version required
 alfrescoGroupId=org.alfresco
-alfrescoBaseVersion=4.2.b
+alfrescoBaseVersion=4.2-HEAD-QA-133
+alfrescoBaseSolrVersion=4.2.c
 
 # indicates whether this is a local build or not
 localBuild=true
