RM-783: File destruction report action (part one)
  * ReportService added ... will be used to consolidate the various reports withing RM (specifically those needed for DOD complicance)
  * Base and declarative implementations of report generators added
  * Destruction report configured with place holder implementation (still need to do name generation, meta-data and final template)
  * Report model added, with destructionReport type defined
  * FileDestructionReport capability added (and capability patch bean updated)
  * Repository action added to file destruction report
  * UI configured to show 'file destruction report' action .. (creates a report and files it as an unfiled record as the destruction report type)
  * fixed up destruction capabilities and actions (capability to destroy record regardless of its current dispostion state did not work)
  * added "AtLeastOne" composite capability condition
  * TODO destruction report template, name and meta-data generation
  * TODO patch to add report template structure to rm data dictionary area
  * TODO start refactor of existing reports including transfer, accession, userRights, filePlan and audit!!



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@52562 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -141,6 +141,7 @@ actions.create-record=Create Record
 actions.hide-record=Hide Record
 actions.reject=Reject
 actions.request-info=Request Information
+actions.file-destruction-report=File Destruction Report
 
 ## File Plan Action Outcomes
 message.multi-select={0} selected items
@@ -205,6 +206,9 @@ message.reject.reason=Reason:
 message.reject.title=Reason for Rejection
 message.reject.failure=Could not reject ''{0}''
 message.reject.success=''{0}'' has been rejected
+message.file-destruction-report.failure=Could not file destruction report
+message.file-destruction-report.success=Destruction report filed
+
 
 ## File Plan Status Indicators
 status.rm-accession=Awaiting Completion for Accession
