RM-781: RM Dependency update (update to HEAD QA build #165, Deleted overriding files, Bug fixes)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/UPDATE@52789 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get.properties
@@ -9,6 +9,11 @@ button.up=Up
 button.customize=Customize
 button.navbar.show=Show Breadcrumb
 button.navbar.hide=Hide Breadcrumb
+button.fullwindow.enter=Full Window
+button.fullscreen.enter=Full Screen
+button.fullscreen.exit=Exit Full Screen
+button.setDefaultView=Set "{0}" as default for this folder
+button.removeDefaultView=Remove "{0}" as default for this folder
 button.freeze.record=Freeze Record(s)
 button.electronic=Electronic
 button.non-electronic=Non-electronic
