--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,7 @@ alfrescoEnterpriseMavenPwd=
 alfrescoGroupId=org.alfresco
 alfrescoBaseVersion=4.2-HEAD-QA-186
 alfrescoBaseSolrVersion=4.2.c
+alfrescoTestDepsVersion=4.2.0-QA-SNAPSHOT
 
 # indicates whether this is a local build or not
 localBuild=true
