RM-772 (Indicator is needed to show which record categories have disposition schedules defined)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@53476 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -230,6 +230,7 @@ status.rm-pdf-record=PDF Record
 status.rm-scanned-record=Scanned Record
 status.rm-web-record=Web Record
 status.rm-info-requested=Information Requested
+status.rm-disposition-schedule=Record Category has a disposition schedule defined
 # Exif
 status.exif=EXIF metadata available
 
