RM: changes made during initial terminology sweep
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@53628 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -1,20 +1,16 @@
-## Records Management (DoD 5015.2) Messages
-
-# Dashlet titles
-dashlet.rma.shortName=Records Management Config
-dashlet.rma.description=Records Management site configuration and helper component
+## Records Management Messages
 
 ## Page titles
 page.rmDocumentLibrary.title=File Plan
-page.rmDocumentLibrary.description=Records Management File Plan with Tree view
+page.rmDocumentLibrary.description=Records Management File Plan
 page.rmSearch.title=Records Search
-page.rmSearch.description=Records Management Search page
+page.rmSearch.description=Records Search page
 page.rmSiteDashboard.title=Records Management Site Dashboard
-page.rmSiteDashboard.description=Records Management site's dashboard page
+page.rmSiteDashboard.description=Records Management site dashboard page
 page.rmAudit.title=Audit Log
 page.rmAudit.description=Audit Log page
 page.rmNewReference.title=New Reference
-page.rmNewReference.description=New Reference between Records
+page.rmNewReference.description=New Reference between records
 page.rmDispositionEdit.title=Edit Disposition Schedule
 page.rmDispositionEdit.description=Page for editing the disposition schedule
 page.rmPermissions.title=Manage Permissions
@@ -34,24 +30,21 @@ page.rmRecordFolderDetails.description=Record Folder Details page for Records Ma
 label.set.idStatus=Identification and Status
 label.set.general=General
 label.set.record=Record
-label.set.scannedRecord=Scanned Record
-label.set.photoRecord=Photographic Record
-label.set.webRecord=Web Record
 label.set.correspondence=Correspondence
 label.set.security=Security
 label.set.vitalRecord=Vital Record
-label.set.disposition=Disposition
+label.set.disposition=Disposition Schedule
 label.set.customMetadata=Custom Properties
 
 label.recordLevelDisposition=Applied to
 label.record=Record
-label.folder=Folder
+label.folder=Record Folder
 label.declared=Declared
 label.recordType=Record Type
 label.seriesIdentifier=Record Series Identifier
 label.categoryIdentifier=Record Category Identifier
 label.folderIdentifier=Record Folder Identifier
-label.recordIdentifier=Unique Record Identifier
+label.recordIdentifier=Record Identifier
 label.dispositionInstructions=Disposition Instructions
 label.dispositionAsOfDate=Disposition as of Date
 label.physicalSize=Physical Size
@@ -63,11 +56,11 @@ label.box=Box
 
 ## Common Property Selector
 label.menu.content=Content
-label.menu.records=Records
-label.menu.disposition=Disposition
+label.menu.records=Record
+label.menu.disposition=Disposition Schedule
 label.menu.specialtypes=Special Types
 label.menu.imap=IMAP
-label.menu.custom=Custom
+label.menu.custom=Custom Properties
 
 ## Buttons
 button.freeze.record=Freeze Record
@@ -78,8 +71,8 @@ button.request-info=Request Information
 message.confirm.delete.title=Delete Confirmation
 message.confirm.delete=Are you sure you want to delete ''{0}''?
 message.confirm.destroy.title=Destroy Confirmation
-message.confirm.destroy=Do you want to destroy ''{0}''?
-message.confirm.destroyMultiple=Do you want to destroy the {0} selected files?
+message.confirm.destroy=Are you sure you want to destroy ''{0}''?
+message.confirm.destroyMultiple=Are you sure you want to destroy the {0} selected files?
 message.confirm2.destroy.title=Destroy Confirmation
 message.confirm2.destroy=The content for the file will be permanently deleted, are you sure you want to continue?
 message.confirm2.destroyMultiple=The content for the files will be permanently deleted, are you sure you want to continue?
@@ -87,14 +80,14 @@ message.confirm.hide.record.title=Hide record
 message.confirm.hide.record=You are hiding the record and you will not be able to see this record within your collaboration site anymore!
 message.select=Select...
 message.pdf-record-fonts.title=PDF Records: Embedded Font Check
-message.pdf-record-fonts.accession=Please ensure any PDF Records just Accessioned to NARA include the applicable embedded fonts.
-message.pdf-record-fonts.transfer=Please ensure any PDF Records just Transferred include the applicable embedded fonts.
-message.pdf-record-fonts.unknown=If the Transfer or Accession included PDF Records, you should check the applicable embedded fonts have been included.
+message.pdf-record-fonts.accession=Please ensure any PDF records just accessioned include the applicable embedded fonts.
+message.pdf-record-fonts.transfer=Please ensure any PDF records just transferred include the applicable embedded fonts.
+message.pdf-record-fonts.unknown=If the transfer or accession included PDF records, you should check the applicable embedded fonts have been included.
 message.request-info-success=Information requested successfully
 message.request-info-failure=An error occurred whilst requesting information
 
 ## Admin Console
-message.admin-console-access-denied=Access Denied - additional permissions are required to access this component.
+message.admin-console-access-denied=You need additional permissions to access this page.
 
 # Document path
 path.fileplan=File Plan
@@ -105,7 +98,7 @@ actions.accession=Accession
 actions.close-folder=Close Folder
 actions.copy-to=Copy to...
 actions.cutoff=Cutoff
-actions.declare=Declare as Record
+actions.declare=Declare Record
 actions.delete=Delete
 actions.destroy=Destroy
 actions.download=Download
@@ -121,7 +114,7 @@ actions.file-to=File to...
 actions.freeze=Freeze
 actions.manage-permissions=Manage Permissions
 actions.move-to=Move to...
-actions.open-folder=Re-open Folder
+actions.open-folder=Reopen Folder
 actions.relinquish=Release Hold
 actions.review-all=Review All
 actions.reviewed=Reviewed
@@ -141,94 +134,89 @@ actions.create-record=Create Record
 actions.hide-record=Hide Record
 actions.reject=Reject
 actions.request-info=Request Information
-actions.file-destruction-report=File Destruction Report
+actions.file-destruction-report=Generate Destruction Report
 
 ## File Plan Action Outcomes
 message.multi-select={0} selected items
-message.accession.failure=Could not mark ''{0}'' as Accessioned
-message.accession.success=''{0}'' successfully marked as Accessioned
-message.accession-complete.failure=Could not complete Accession ''{0}''
-message.accession-complete.success=''{0}'' Accession has been completed
-message.close.failure=Could not close ''{0}''
-message.close.success=''{0}'' successfully Closed
-message.cutoff.failure=Could not Cutoff ''{0}''
-message.cutoff.success=''{0}'' successfully Cutoff
-message.declare.failure=Could not Declare ''{0}'' as a Record
-message.declare.failure.more=The record has mandatory metadata that needs to be completed before the record can be declared.
-message.declare.success=''{0}'' was Declared as a Record
-message.delete.failure=Could not delete ''{0}''
+message.accession.failure=Couldn't accession ''{0}'' 
+message.accession.success=''{0}'' successfully accessioned
+message.accession-complete.failure=Couldn't complete accession ''{0}''
+message.accession-complete.success=''{0}'' accession completed
+message.close.failure=Couldn't close ''{0}''
+message.close.success=''{0}'' successfully closed
+message.cutoff.failure=Couldn't cutoff ''{0}''
+message.cutoff.success=''{0}'' successfully cutoff
+message.declare.failure=Couldn't declare ''{0}'' as a record
+message.declare.failure.more=The record has metadata that needs to be completed before the record can be declared.
+message.declare.success=''{0}'' was declared as a record
+message.delete.failure=Couldn't delete ''{0}''
 message.delete.success=''{0}'' successfully deleted
-message.destroy.failure=Could not Destroy ''{0}''
-message.destroy.success=''{0}'' successfully Destroyed
+message.destroy.failure=Couldn't destroy ''{0}''
+message.destroy.success=''{0}'' successfully destroyed
 message.edit-disposition-as-of-date.title=Edit Disposition Date
-message.edit-disposition-as-of-date.failure=Could not update Disposition As Of Date
-message.edit-disposition-as-of-date.success=Successfully updated Disposition As Of Date for ''{0}''
+message.edit-disposition-as-of-date.failure=Couldn't update disposition as of date
+message.edit-disposition-as-of-date.success=Successfully updated disposition as of date for ''{0}''
 message.edit-hold.reason.label=Reason:
 message.edit-hold.title=Update Hold Details
-message.edit-hold.failure=Could not update Hold details
-message.edit-hold.success=Successfully updated Hold
+message.edit-hold.failure=Couldn't update hold details
+message.edit-hold.success=Successfully updated hold
 message.edit-review-as-of-date.title=Edit Review Date
-message.edit-review-as-of-date.failure=Could not update Review As Of Date
-message.edit-review-as-of-date.success=Successfully updated Review As Of Date for ''{0}''
+message.edit-review-as-of-date.failure=Couldn't update review as of date
+message.edit-review-as-of-date.success=Successfully updated review as of date for ''{0}''
 message.freeze.reason=Reason:
 message.freeze.title=Reason for Freeze
-message.freeze.failure=Could not Freeze ''{0}''
-message.freeze.success=''{0}'' now Frozen
-message.open-folder.failure=Could not Open Record Folder ''{0}''
-message.open-folder.success=Record Folder ''{0}'' was Opened
-message.relinquish.failure=Could not Release Hold
+message.freeze.failure=Couldn't Freeze ''{0}''
+message.freeze.success=''{0}'' now frozen
+message.open-folder.failure=Couldn't open record folder ''{0}''
+message.open-folder.success=Record folder ''{0}'' was opened
+message.relinquish.failure=Couldn't release hold
 message.relinquish.success=Hold Released
-message.review-all.failure=Could not mark Records in Folder ''{0}'' as Reviewed
-message.review-all.success=Records in Folder ''{0}'' have been marked as Reviewed
-message.reviewed.failure=Could not mark ''{0}'' as Reviewed
-message.reviewed.success=''{0}'' successfully marked as Reviewed
-message.split-email.failure=Could not split ''{0}''
-message.split-email.success=''{0}'' successfully split
-message.transfer.failure=Could not mark ''{0}'' as Transferred
-message.transfer.success=''{0}'' successfully marked as Transferred
-message.transfer-complete.failure=Could not complete Transfer ''{0}''
-message.transfer-complete.success=''{0}'' Transfer has been completed
-message.undeclare.failure=Could not Undeclare ''{0}''
-message.undeclare.success=''{0}'' is no longer a Declared Record
-message.undo-cutoff.failure=Could not Reverse Cutoff for ''{0}''
-message.undo-cutoff.success=Reversed Cutoff on ''{0}''
-message.unfreeze.failure=Could not Unfreeze ''{0}''
-message.unfreeze.success=''{0}'' successfully Unfrozen
-message.unfreeze-all.failure=Could not Unfreeze All in Hold ''{0}''
-message.unfreeze-all.success=All Records in Hold ''{0}'' now Unfrozen
-message.create-disposition-schedule.failure=Could not Create Disposition Schedule in ''{0}''
-message.create-disposition-schedule.success=Disposition Schedule in ''{0}'' now created
-message.create-record.success=Successfully created Record
-message.create-record.failure=Could not create Record
-message.hide-record.success=Successfully hidden Record
-message.hide-record.failure=Could not hide Record
+message.review-all.failure=Couldn't review records in folder ''{0}'' 
+message.review-all.success=Records in folder ''{0}'' have been reviewed
+message.reviewed.failure=Couldn't review ''{0}'' 
+message.reviewed.success=''{0}'' successfully reviewed
+message.split-email.failure=Couldn't separate attachments from ''{0}''
+message.split-email.success=Successfully separated attachments from ''{0}'' 
+message.transfer.failure=Couldn't transfer ''{0}'' 
+message.transfer.success=''{0}'' successfully transferred
+message.transfer-complete.failure=Couldn't complete transfer ''{0}''
+message.transfer-complete.success=''{0}'' transfer has been completed
+message.undeclare.failure=Couldn't undeclare ''{0}''
+message.undeclare.success=''{0}'' is no longer a declared record
+message.undo-cutoff.failure=Couldn't undo cutoff for ''{0}''
+message.undo-cutoff.success=Undo cutoff on ''{0}''
+message.unfreeze.failure=Couldn't unfreeze ''{0}''
+message.unfreeze.success=''{0}'' successfully unfrozen
+message.unfreeze-all.failure=Contents of hold ''{0}'' could not be unfrozen
+message.unfreeze-all.success=Conetents of hold ''{0}'' now unfrozen
+message.create-disposition-schedule.failure=Couldn't create disposition schedule for ''{0}''
+message.create-disposition-schedule.success=Disposition schedule for ''{0}'' created
+message.create-record.success=Successfully created record
+message.create-record.failure=Couldn't create record
+message.hide-record.success=Record hidden
+message.hide-record.failure=Couldn't hide record
 message.reject.reason=Reason:
 message.reject.title=Reason for Rejection
-message.reject.failure=Could not reject ''{0}''
-message.reject.success=''{0}'' has been rejected
-message.file-destruction-report.failure=Could not file destruction report
-message.file-destruction-report.success=Destruction report filed
+message.reject.failure=Couldn't reject ''{0}''
+message.reject.success=''{0}'' rejected
+message.file-destruction-report.failure=Couldn't generate destruction report
+message.file-destruction-report.success=Destruction report generated
 
 
 ## File Plan Status Indicators
-status.rm-accession=Awaiting Completion for Accession
-status.rm-accessioned=Accessioned to NARA
-status.rm-closed=Record Folder is Closed
-status.rm-cutoff=Cut Off
-status.rm-cutoff-folder=Cut Off (implies Record Folder is Closed)
+status.rm-accession=Accession Pending
+status.rm-accessioned=Accessioned
+status.rm-closed=Closed
+status.rm-cutoff=Cutoff
+status.rm-cutoff-folder=Cutoff
 status.rm-destroyed=Destroyed
-status.rm-frozen=Record is Frozen
-status.rm-multi-parent=Record has been linked in multiple record folders
-status.rm-open=Record Folder is Open
-status.rm-transfer=Awaiting Completion for Transfer
+status.rm-frozen=Frozen
+status.rm-multi-parent=Linked in Multiple Record Folders
+status.rm-open=Open
+status.rm-transfer=Transfer Pending
 status.rm-transferred=Transferred
-status.rm-vital-record=Vital Record Indicator
-status.rm-rejected-record=Rejected Record
-# Record Types
-status.rm-digital-photograph-record=Digital Photograph Record
-status.rm-pdf-record=PDF Record
-status.rm-scanned-record=Scanned Record
-status.rm-web-record=Web Record
+status.rm-vital-record=Vital Record
+status.rm-rejected-record=Rejected
 status.rm-info-requested=Information Requested
 status.rm-disposition-schedule=Record Category has a disposition schedule defined
 # Exif
@@ -293,23 +281,23 @@ label.dod.contentManagementSystem=Content Management System
 
 # Admin Console tools
 tool.rm-define-roles.label=Define Roles
-tool.rm-define-roles.description=Create and Edit Records Management Roles
+tool.rm-define-roles.description=Create and edit roles
 tool.rm-custom-metadata.label=Custom Metadata
-tool.rm-custom-metadata.description=Records Management Custom Metadata
+tool.rm-custom-metadata.description=Custom metadata
 tool.rm-list-of-values.label=List of Values
-tool.rm-list-of-values.description=Records Management Define List of Values
+tool.rm-list-of-values.description=List of values definitions
 tool.rm-references.label=Relationships
-tool.rm-references.description=Records Management Define Relationships
+tool.rm-references.description=Relationships definitions
 tool.rm-events.label=Events
-tool.rm-events.description=Records Management Events
+tool.rm-events.description=Event definitions
 tool.rm-audit.label=Audit
 tool.rm-audit.description=Records Management Audit
 tool.rm-email-mappings.label=Email Mappings
-tool.rm-email-mappings.description=Records Management Email Mappings
+tool.rm-email-mappings.description=Email Mappings definitions
 tool.rm-user-rights.label=User Rights Report
-tool.rm-user-rights.description=Records User Rights Report
+tool.rm-user-rights.description=User rights report
 tool.rm-users-and-groups.label=Users and Groups
-tool.rm-users-and-groups.description=Records Management Users and Groups
+tool.rm-users-and-groups.description=Users and groups
 
 ## Buttons
 button.sort.ascending=Sort Ascending
@@ -357,7 +345,7 @@ details.record.originating-organization=Originating Organization
 details.undeclared-record.info=Undeclared Record
 # Transfer Container
 details.transfer-container.title=Transfer {0}
-details.transfer-container.is-accession=<em>Note:</em> Transfer type is Accession to NARA
+details.transfer-container.is-accession=<em>Note:</em> Transfer type is Accession
 # Hold Container
 details.hold-container.title=Hold created on {0}
 details.hold-container.title.date-format=dd mmmm yyyy 'at' HH:MM:ss
@@ -367,7 +355,7 @@ details.hold-container.reason.none=Not Available
 ## Pop-up Messages
 # General
 message.loading=Loading the File Plan...
-message.error=Could not access the File Plan
+message.error=Couldn't access the File Plan
 message.empty=No items
 
 ## File Upload (upload new version)
@@ -406,11 +394,11 @@ header.rm-management.label=Management Console
 header.rm-management.description=Management Console
 
 ## Request Info Workflow
-rm.wf.information-requested-for-record=Information Requested For Record
-rm.wf.request-information-from=Request Information From
-rm.wf.requested-information=Requested Information
+rm.wf.information-requested-for-record=Information requested for record
+rm.wf.request-information-from=Request information from
+rm.wf.requested-information=Requested information
 rm.wf.record=Record
-rm.wf.selected-users-and-groups=Selected users and groups
-rm.wf.give-details=Give details
+rm.wf.selected-users-and-groups=Users and groups
+rm.wf.give-details=Provide information
 rm.wf.message=Message
 rm.wf.details=Details
