RM-800: Terminology changes
 * "Create Record" (from a collaboration site) changes to "Declare As Record"
 * "Declare Record" (action) becomes "Complete Record"
 * "Undeclare Record" (action) becomes "Reopen Record"
 * "Declared" (record state) becomes "Completed"
 * "Undeclared" (record state) becomes "Incomplete"




git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@53689 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -39,7 +39,7 @@ label.set.customMetadata=Custom Properties
 label.recordLevelDisposition=Applied to
 label.record=Record
 label.folder=Record Folder
-label.declared=Declared
+label.declared=Completed
 label.recordType=Record Type
 label.seriesIdentifier=Record Series Identifier
 label.categoryIdentifier=Record Category Identifier
@@ -98,7 +98,7 @@ actions.accession=Accession
 actions.close-folder=Close Folder
 actions.copy-to=Copy to...
 actions.cutoff=Cutoff
-actions.declare=Declare Record
+actions.declare=Complete Record
 actions.delete=Delete
 actions.destroy=Destroy
 actions.download=Download
@@ -122,7 +122,7 @@ actions.add-record-metadata=Add Record Metadata
 actions.split-email=Split Email Attachments
 actions.transfer=Transfer
 actions.transfer-complete=Complete Transfer
-actions.undeclare=Undeclare Record
+actions.undeclare=Reopen Record
 actions.undo-cutoff=Undo Cutoff
 actions.unfreeze=Unfreeze
 actions.unfreeze-all=Unfreeze All
@@ -130,7 +130,7 @@ actions.create-disposition-schedule=Create Disposition Schedule
 actions.upload-new-version=Upload New Version
 actions.view-details=View Details
 actions.view-audit-log=View Audit Log
-actions.create-record=Create Record
+actions.create-record=Declare As Record
 actions.hide-record=Hide Record
 actions.reject=Reject
 actions.request-info=Request Information
@@ -146,9 +146,9 @@ message.close.failure=Couldn't close ''{0}''
 message.close.success=''{0}'' successfully closed
 message.cutoff.failure=Couldn't cutoff ''{0}''
 message.cutoff.success=''{0}'' successfully cutoff
-message.declare.failure=Couldn't declare ''{0}'' as a record
-message.declare.failure.more=The record has metadata that needs to be completed before the record can be declared.
-message.declare.success=''{0}'' was declared as a record
+message.declare.failure=Couldn't complete ''{0}'' record
+message.declare.failure.more=The record has metadata that needs to be completed.
+message.declare.success=''{0}'' was completed
 message.delete.failure=Couldn't delete ''{0}''
 message.delete.success=''{0}'' successfully deleted
 message.destroy.failure=Couldn't destroy ''{0}''
@@ -181,8 +181,8 @@ message.transfer.failure=Couldn't transfer ''{0}''
 message.transfer.success=''{0}'' successfully transferred
 message.transfer-complete.failure=Couldn't complete transfer ''{0}''
 message.transfer-complete.success=''{0}'' transfer has been completed
-message.undeclare.failure=Couldn't undeclare ''{0}''
-message.undeclare.success=''{0}'' is no longer a declared record
+message.undeclare.failure=Couldn't reopen ''{0}''
+message.undeclare.success=''{0}'' is no longer a complete record
 message.undo-cutoff.failure=Couldn't undo cutoff for ''{0}''
 message.undo-cutoff.success=Undo cutoff on ''{0}''
 message.unfreeze.failure=Couldn't unfreeze ''{0}''
@@ -191,8 +191,8 @@ message.unfreeze-all.failure=Contents of hold ''{0}'' could not be unfrozen
 message.unfreeze-all.success=Conetents of hold ''{0}'' now unfrozen
 message.create-disposition-schedule.failure=Couldn't create disposition schedule for ''{0}''
 message.create-disposition-schedule.success=Disposition schedule for ''{0}'' created
-message.create-record.success=Successfully created record
-message.create-record.failure=Couldn't create record
+message.create-record.success=Successfully declared as record
+message.create-record.failure=Couldn't declare as record
 message.hide-record.success=Record hidden
 message.hide-record.failure=Couldn't hide record
 message.reject.reason=Reason:
@@ -315,7 +315,7 @@ menu.select.invert=Invert Selection
 menu.select.folders=Folders
 menu.select.documents=Documents
 menu.select.records=Records
-menu.select.undeclared-records=Undeclared Records
+menu.select.undeclared-records=Incomplete Records
 
 ## Metadata Fields
 # Generic
@@ -341,8 +341,8 @@ details.record.date-filed=Date Filed
 details.record.publication-date=Publication Date
 details.record.originator=Originator
 details.record.originating-organization=Originating Organization
-# Undeclared Record
-details.undeclared-record.info=Undeclared Record
+# Incomplete Record
+details.undeclared-record.info=Incomplete Record
 # Transfer Container
 details.transfer-container.title=Transfer {0}
 details.transfer-container.is-accession=<em>Note:</em> Transfer type is Accession
@@ -371,7 +371,7 @@ tip.insitu-tag=Tag
 ## Help panels, including Drag and Drop
 show.folders=Show {0} subfolder(s)=======
 
-details.undeclared-record.info=Undeclared Record
+details.undeclared-record.info=Incomplete Record
 details.record.identifier=Unique Record Identifier
 details.record.originator=Originator
 details.record.originating-organization=Originating Organization
