--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get.properties
@@ -15,7 +15,7 @@ message.deletesearch.failure=Search could not be deleted.
 label.searchtitle=Search
 label.searchterm=Query Text
 label.records=Records
-label.undeclared=Undeclared
+label.undeclared=Incomplete
 label.criteria=Critera
 label.results=Results
 label.insertfield=Insert Field
