RM-791 (Select menu item in the file plan does not work)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@53789 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get.properties
@@ -81,6 +81,12 @@ description.unfiledRecords=Unfiled Records
 description.unfiledRecords.more=(Records that are not Filed)
 description.unfiledRecords.more.filterDisplay=currently viewing "{0}"
 
+## Toolbar Menu Items
+menu.select.records=Records
+menu.select.undeclaredRecords=Undeclared Records
+menu.select.recordFolders=Record Folders
+menu.select.recordCategories=Record Categories
+
 ## Browser dialogs
 label.filter-description.acp=Alfresco Content Package file (.acp)
 label.filter-description.zip=Archive package (.zip)
