RM:  'cleandeps' task now removed dependant war files and cleans build dir's, as well as deleting exploded dependancies dirs
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@53917 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -251,8 +251,9 @@ subprojects {
 		}		
 	}
 		
-	task cleanDeps << {
+	task cleanDeps(dependsOn: clean) << {
 		ant.delete(includeEmptyDirs: 'true', dir: explodedDepsDir)
+		ant.delete(file: warFile)
 	}	
 	
 	/** --- I18N tasks */
